# StringSuite

./: README.md
.github/ISSUE_TEMPLATE/: bug-report-template.md
doc/md/: Index.md  bldopt.md  meas.md
doc/md/encmetric/: enc_class.md  encods.md  serialize.md  strings.md  wid_class.md
doc/md/io/: dfces.md  string_stream.md
src/: CMakeLists.txt  base64.cpp  basic_ptr.cpp  byte_tools.cpp  detector.cpp  enc_c.cpp  enc_io.cpp  encoding.cpp  iso8859_enc.cpp  jis.cpp  koi8.cpp  linux_enc_io_core.cpp.in  stringsuite.pc.in  utf16_enc.cpp  utf32_enc.cpp  utf8_enc.cpp  win_codepages.cpp  win_enc_io_core.cpp.in
src/strsuite/: enc_io.hpp  encmetric.hpp  format.hpp  io.hpp  tokens.hpp
src/strsuite/encmetric/: all_enc.hpp  ascii_extensions.hpp  base.hpp  base64.hpp  basic_ptr.hpp  byte_tools.hpp  chite.hpp  chite.tpp  config.hpp  config.hpp.in  dynstring.hpp  dynstring.tpp  enc_c.hpp  enc_c_0.hpp  enc_io.hpp  enc_io_core.hpp  enc_string.hpp  enc_string.tpp  encmetric.hpp  encoding.hpp  endianess.hpp  exceptions.hpp  features.hpp  fixed_point.hpp  iso8859_enc.hpp  jis.hpp  koi8.hpp  raw_buffer.hpp  serialize.hpp  stringbuild.hpp  stringbuild.tpp  type_array.hpp  utf16_enc.hpp  utf16_enc_0.hpp  utf32_enc.hpp  utf32_enc_0.hpp  utf8_enc.hpp  win_codepages.hpp
src/strsuite/format/: format_exc.hpp  format_tmp.hpp  format_tmp.tpp  integral_format.hpp  integral_format.tpp
src/strsuite/io/: buffers.hpp  byte_stream.hpp  char_stream.hpp  char_stream.tpp  cio_stream.hpp  enc_io.hpp  enc_io_buffer.hpp  enc_io_core.hpp  enc_io_exc.hpp  files.hpp  integral_format.hpp  integral_format.tpp  middle_enc.hpp  nl_stream.hpp  nl_stream.tpp  string_stream.hpp  string_stream.tpp  string_stream_wrapper.hpp  tokens.hpp
src/strsuite/params/: param.hpp
src/strsuite/tokens/: tokens.hpp
